--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -32,7 +32,7 @@ layout: default
           </a>
         </h3>
         {%- if site.show_excerpts -%}
-          {{ post.excerpt }} <br/> <br/>...
+          <p>{{ post.excerpt }} ...</p>
         {%- endif -%}
       </li>
       {%- endfor -%}
