--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -32,7 +32,7 @@ layout: default
           </a>
         </h3>
         {%- if site.show_excerpts -%}
-          <p>{{ post.excerpt }} ...</p>
+          <p>{{ post.excerpt | remove: "<p>" | remove: "</p>" }} ...</p>
         {%- endif -%}
       </li>
       {%- endfor -%}
