--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -32,8 +32,8 @@ layout: default
           </a>
         </h3>
         {%- if site.show_excerpts -%}
-          {% comment %} remove first and last <p> and </p> tags{% endcomment %}
-          {% assign size = post.excerpt | size | minus: 7 %}
+          {%- comment -%} remove first and last <p> and </p> tags{%- endcomment -%}
+          {%- assign size = post.excerpt | size | minus: 10 -%}
           <p>{{ post.excerpt | slice: 3, size }} ...</p>
         {%- endif -%}
       </li>
