--- a/_includes/google-analytics.html
+++ b/_includes/google-analytics.html
@@ -5,5 +5,7 @@
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', '{{ site.google_analytics }}');
+  gtag('config', '{{ site.google_analytics }}', { client_storage: 'none',
+   'anonymize_ip': true ,
+   'allow_google_signals': false  });
 </script>
