--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -1,2 +1,25 @@
 // Placeholder to allow defining custom styles that override everything else.
 // (Use `_sass/minima/custom-variables.scss` to override variable defaults)
+
+
+// body, h1, h2, h3, h4, h5, h6,
+// p, blockquote, pre, hr,
+// dl, dd, ol, ul, figure {
+//   margin: 0;
+//   padding: 0;
+// }
+@media only screen and (max-width:480px){
+  img{
+    float: none;
+    display: block	;
+    margin:0 auto !important;
+    margin-bottom: 10px !important;
+  }
+  .switch-order {
+    display: flex;
+    flex-direction: column;
+  }
+  .switch-order div:first-child {
+    order: 1;
+  }
+}
