--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -8,6 +8,22 @@
 //   margin: 0;
 //   padding: 0;
 // }
+// @media only screen and (max-width:480px){
+//   img{
+//     float: none;
+//     display: block	;
+//     margin:0 auto !important;
+//     margin-bottom: 10px !important;
+//   }
+//   .switch-order {
+//     display: flex;
+//     flex-direction: column;
+//   }
+//   .switch-order div:first-child {
+//     order: 1;
+//   }
+// }
+
 @media only screen and (max-width:480px){
   img{
     float: none;
@@ -16,10 +32,10 @@
     margin-bottom: 10px !important;
   }
   .switch-order {
-    display: flex;
-    flex-direction: column;
+    display: table;
+    width: 100%;
   }
   .switch-order div:first-child {
-    order: 1;
+    display: table-footer-group;
   }
 }
