--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -24,18 +24,18 @@
 //   }
 // }
 
-@media only screen and (max-width:480px){
-  img{
-    float: none;
-    display: block	;
-    margin:0 auto !important;
-    margin-bottom: 10px !important;
-  }
-  .switch-order {
-    display: table;
-    width: 100%;
-  }
-  .switch-order div:first-child {
-    display: table-footer-group;
-  }
-}
+// @media only screen and (max-width:480px){
+//   img{
+//     float: none;
+//     display: block	;
+//     margin:0 auto !important;
+//     margin-bottom: 10px !important;
+//   }
+//   .switch-order {
+//     display: table;
+//     width: 100%;
+//   }
+//   .switch-order div:first-child {
+//     display: table-footer-group;
+//   }
+// }
