--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -12,6 +12,7 @@
     display: block	;
     margin:0 auto !important;
     margin-bottom: 10px !important;
+    margin-top: 0px !important;
   }
   .switch-order {
     display: table;
@@ -20,4 +21,5 @@
   .switch-order div:first-child {
     display: table-footer-group;
   }
+  h1 {margin: 0px}
 }
