CSS update and position
Added cv-title and cv-header class.
Moved dates in CV to the line of the job title.

Also added current position as Senior Research Scientist.

--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -280,3 +280,16 @@ table {
             -ms-overflow-style: -ms-autohiding-scrollbar;
   }
 }
+
+/**
+ * Custom modifications
+ */
+// h1, h2, h3, h4, h5, h6 {
+//     margin-bottom: $spacing-unit/4;
+//     margin-top: $spacing-unit/8
+// }
+
+// p {
+//     margin-bottom: $spacing-unit/4;
+//     // margin-top: $spacing-unit/8
+// }
