--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -2,7 +2,7 @@
  * Site header
  */
 .site-header {
-  border-top: 5px solid $border-color-03;
+  border-top: 1px solid $border-color-01;
   border-bottom: 1px solid $border-color-01;
   min-height: $spacing-unit * 1.865;
   line-height: $base-line-height * $base-font-size * 2.25;
@@ -238,7 +238,7 @@
  * Posts
  */
 .post-header {
-  margin-bottom: $spacing-unit;
+  margin-bottom: $spacing-unit / 2;
 }
 
 .post-title,
@@ -340,3 +340,26 @@
     width: calc(50% - (#{$spacing-unit} / 2));
   }
 }
+
+/**
+ * Custom CV format
+ */
+ .cv-title {
+   p {
+     margin-bottom: $spacing-unit / 4;
+   }
+
+   h1, h2, h3, h4, h5, h6 {
+     margin-bottom: $spacing-unit * 0.3;
+     // font-weight : bold;
+     // color: $brand-color;
+   }
+ }
+
+
+ .cv-header {
+   h1, h2, h3, h4, h5, h6 {
+     margin-bottom: $spacing-unit / 4;
+     margin-top: $spacing-unit * 2
+   }
+ }
