--- a/_includes/google-analytics.html
+++ b/_includes/google-analytics.html
@@ -1,11 +1,23 @@
 <script async src="https://www.googletagmanager.com/gtag/js?id={{ site.google_analytics }}"></script>
 <script>
-  window['ga-disable-{{ site.google_analytics }}'] = window.doNotTrack === "1" || navigator.doNotTrack === "1" || navigator.doNotTrack === "yes" || navigator.msDoNotTrack === "1";
+  // window['ga-disable-{{ site.google_analytics }}'] = window.doNotTrack === "1" || navigator.doNotTrack === "1" || navigator.doNotTrack === "yes" || navigator.msDoNotTrack === "1";
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', '{{ site.google_analytics }}', { client_storage: 'none',
-   'anonymize_ip': true ,
-   'allow_google_signals': false  });
+  // gtag('config', '{{ site.google_analytics }}', { client_storage: 'none',
+  //  'anonymize_ip': true ,
+  //  'allow_google_signals': false  });
+
+   gtag("consent", "default",
+   'config', '{{ site.google_analytics }}',
+   {
+    ad_storage: "denied",
+    analytics_storage: "denied",
+    functionality_storage: "denied",
+    personalization_storage: "denied",
+    security_storage: "denied"
+    });
+
+
 </script>
