--- a/_includes/google-analytics.html
+++ b/_includes/google-analytics.html
@@ -1,6 +1,6 @@
-<script async src="https://www.googletagmanager.com/gtag/js?id={{ site.google_analytics }}"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-V8Y2LXLKYD"></script>
 <script>
-  window['ga-disable-{{ site.google_analytics }}'] = window.doNotTrack === "1" || navigator.doNotTrack === "1" || navigator.doNotTrack === "yes" || navigator.msDoNotTrack === "1";
+  //window['ga-disable-{{ site.google_analytics }}'] = window.doNotTrack === "1" || navigator.doNotTrack === "1" || navigator.doNotTrack === "yes" || navigator.msDoNotTrack === "1";
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
@@ -10,7 +10,7 @@
   //  'allow_google_signals': false  });
 
    gtag("consent", "default",
-   'config', '{{ site.google_analytics }}',
+   'config', 'G-V8Y2LXLKYD',
    {
     ad_storage: "denied",
     analytics_storage: "denied",
