Replaced Google analytics with goatcounter. Added Privacy policy

--- a/_includes/google-analytics.html
+++ b/_includes/google-analytics.html
@@ -1,4 +1,4 @@
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-V8Y2LXLKYD"></script>
+<!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-V8Y2LXLKYD"></script>
 <script>
   //window['ga-disable-{{ site.google_analytics }}'] = window.doNotTrack === "1" || navigator.doNotTrack === "1" || navigator.doNotTrack === "yes" || navigator.msDoNotTrack === "1";
   window.dataLayer = window.dataLayer || [];
@@ -18,6 +18,6 @@
     personalization_storage: "denied",
     security_storage: "denied"
     });
-
-
-</script>
+</script> -->
+<script data-goatcounter="https://jramueller.goatcounter.com/count"
+        async src="//gc.zgo.at/count.js"></script>
