--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -15,7 +15,7 @@
           {%- endif %}
         </ul>
       {%- endif %}
-      <a href="privacy/">Privacy policy</a>
+      <a href="/privacy/">Privacy policy</a>
       </div>
       <div class="footer-col">
         <p>{{ site.description | escape }}</p>
